--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,6 @@ RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*)$ /index.php/$1 [L]
+
+# Protect app files
+RewriteRule ^(app|system|scripts.*)$ /index.php/$1 [L]
