CHANGED views, .htacces, docs to allow munkireport to run from a subdirectory

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,9 @@
 RewriteEngine On
 
+RewriteBase /
+
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ /index.php/$1 [L]
+RewriteRule ^(.*)$ index.php?/$1 [L]
 
 # Protect app files
-RewriteRule ^((app|system|scripts).*)$ /index.php/$1 [L]
+RewriteRule ^((app|system|scripts).*)$ index.php/$1 [L]
