Further simplifying setup for new admins.
According to http://httpd.apache.org/docs/current/mod/mod_rewrite.html#rewritebase, we don't need to use RewiteBase because all of our resources (real and rewritten) are accessible under the same DocumentRoot. One less thing to configure == one more thing to be happy about!

--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,7 @@
 RewriteEngine On
 
-RewriteBase /
-
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*)$ index.php?/$1 [L]
 
 # Protect app files
-RewriteRule ^((app|system|scripts).*)$ index.php/$1 [L]
+RewriteRule ^((app|system|scripts|config.php).*)$ index.php/$1 [L]
