Added protection for app directory in web.confg (IIS) untested

--- a/web.config
+++ b/web.config
@@ -7,4 +7,13 @@
 			<mimeMap fileExtension="*" mimeType="application/octet-stream" /> <!-- Allows all extensions -->	
 		</staticContent>
     </system.webServer>
+    <location path="app"><!-- Protect app directory -->
+	     <system.webServer>
+	         <security>
+	             <authorization>
+	                 <remove users="*" roles="" verbs="" />
+	             </authorization>
+	         </security>
+	     </system.webServer>
+	 </location>
 </configuration>
