Better protection in web.config (now with file)

--- a/web.config
+++ b/web.config
@@ -6,14 +6,12 @@
 			<mimeMap fileExtension="." mimeType="application/octet-stream" /> <!-- Allows files without extension -->
 			<mimeMap fileExtension="*" mimeType="application/octet-stream" /> <!-- Allows all extensions -->	
 		</staticContent>
+		<security>
+         <requestFiltering>
+            <hiddenSegments> <!-- Add filepaths that you don't want to be browsed -->
+               <add segment="app" />
+            </hiddenSegments>
+         </requestFiltering>
+      </security>
     </system.webServer>
-    <location path="app"><!-- Protect app directory -->
-	     <system.webServer>
-	         <security>
-	             <authorization>
-	                 <remove users="*" roles="" verbs="" />
-	             </authorization>
-	         </security>
-	     </system.webServer>
-	 </location>
 </configuration>
