--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ app/views/dashboard/custom_dashboard.php
 config.php
 *.DS_Store
 
-assets/css/custom.css
-assets/js/custom.js
+*custom.css
+*custom.js
