Add authAD with adldap2

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     },
     "require": {
         "guzzlehttp/guzzle": "~6.0",
-        "onelogin/php-saml": "^2.11"
+        "onelogin/php-saml": "^2.11",
+        "adldap2/adldap2": "^8.0"
     }
 }
