--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,8 @@
 {
+    "name": "munkireport/munkireport-php",
+    "description": "Reporting tool for munki",
+    "type": "project",
+    "license": "MIT",
     "require-dev": {
         "squizlabs/php_codesniffer": "^2.5"
     },
