Move CFPropertyList to vendor directory

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "~6.0",
         "onelogin/php-saml": "^2.11",
         "adldap2/adldap2": "^8.0",
-        "hautelook/phpass": "^1.1"
+        "hautelook/phpass": "^1.1",
+        "rodneyrehm/plist": "^2.0"
     }
 }
