--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,12 @@
         "php": ">=5.6",
         "guzzlehttp/guzzle": "~6.0",
         "hautelook/phpass": "^1.1",
-        "rodneyrehm/plist": "^2.0"
+        "illuminate/console": "~5.4",
+        "illuminate/database": "5.4.36",
+        "illuminate/filesystem": "~5.4",
+        "league/flysystem": "~1.0",
+        "rodneyrehm/plist": "^2.0",
+        "doctrine/dbal": "~2.5"
     },
     "suggest": {
         "onelogin/php-saml": "^2.12 Required for SAML authentication",
