--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,17 @@
         "squizlabs/php_codesniffer": "^2.5"
     },
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.0",
         "guzzlehttp/guzzle": "~6.0",
         "hautelook/phpass": "^1.1",
-        "illuminate/console": "~5.4",
-        "illuminate/database": "5.4.36",
-        "illuminate/filesystem": "~5.4",
+        "illuminate/console": "~5.5",
+        "illuminate/database": "5.5",
+        "illuminate/filesystem": "~5.5",
         "league/flysystem": "~1.0",
         "rodneyrehm/plist": "^2.0",
-        "doctrine/dbal": "~2.5"
+        "doctrine/dbal": "~2.5",
+        "symfony/debug": "~3.3",
+        "illuminate/view": "^5.5"
     },
     "suggest": {
         "onelogin/php-saml": "^2.12 Required for SAML authentication",
