--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "squizlabs/php_codesniffer": "^2.5"
     },
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.0.27",
+        "ext-dom": "*",
         "guzzlehttp/guzzle": "~6.0",
         "hautelook/phpass": "^1.1",
         "illuminate/console": "~5.5",
