--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
         "psr-4": {
             "munkireport\\models\\": "app/models/",
             "munkireport\\controller\\": "app/controllers",
-            "munkireport\\lib\\": "app/lib/munkireport"
+            "munkireport\\lib\\": "app/lib/munkireport",
+            "Mr\\Contracts\\": "mr/contracts",
+            "Mr\\Core\\": "mr/core"
         }
     }
 }
